--- a/1.2
+++ b/1.2
@@ -5,7 +5,7 @@ Hãy khai báo kiểu dữ liệu biểu diễn khái niệm hỗn số trong to
 
 struct HonSo
 {
-  int TuS0, MauSo, SoNguyen;
+  int TuSo, MauSo, SoNguyen;
 };
 typedef struct HonSo HONSO;
 
